# TransXform

./: .gitignore  Cargo.toml  ROADMAP.md  TransXform_Whitepaper.md  TransXform_Whitepaper.txt
docs/: index.html
examples/: basic_training.rs  loom_spec.yaml
src/: checkpoint.rs  collector.rs  control.rs  diagnostic.rs  discovery.rs  error.rs  executor.rs  ledger.rs  lib.rs  merkle.rs  model.rs  monitor.rs  phase.rs  registry.rs  regret.rs  report.rs  supervisor.rs  types.rs
src/spec/: mod.rs  parse.rs  types.rs  validate.rs
src/tch_backend/: collector.rs  mod.rs  model.rs
src/witness/: app.rs  markers.rs  mod.rs  phase_strip.rs  timeline.rs
tests/: integration.rs
voyages/: README.md  crux_bottleneck_abort.md  frog_slow_poison.md  icfu_aeoncore_30k.md  mire_label_noise.md  run8_semantic_normalizer.md
